--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ ul
   list-style: none;
 }
 
+a
+{
+  all: initial;
+  font: inherit;
+}
+
 @font-face
 {
   font-family: 'Carving';
@@ -25,7 +31,7 @@ ul
 
 .aside-wrapper
 {
-  width:20vw;
+  width:15vw;
   height: 100%;
 
   background-color: #172639;
@@ -91,7 +97,7 @@ ul
 
 .main-wrapper
 {
-  width: 80vw;
+  width: 85vw;
   height: 100%;
 }
 
@@ -164,7 +170,7 @@ ul
   margin-right: 2rem;
 }
 
-.user-top-name:hover, .notifications:hover, .nav-icon:hover
+.user-top-name:hover, .notifications:hover, .nav-icon:hover, .content:hover, .new:hover, .trending:hover
 {
   cursor: pointer;
 }
@@ -228,22 +234,86 @@ ul
 {
   background-color: #d3d3d6;
   height: 80vh;
-  border: red solid;
   display: flex;
+  justify-content: space-between;
+}
+
+.posts-wrapper
+{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-title
+{
+  display: flex;
+  width: 100%;
+}
+
+.posts-title
+{
+  margin-left: 1rem;
+  font-weight: bold;
 }
 
 .posts
 {
-  border: green solid;
-  width: 60vw;
+  display: grid;
+  grid-template-columns: repeat(2, 30vw);
+  grid-template-rows: repeat(3, 25vh);
+}
+
+.post-box
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content
+{
+  width: 25vw;
+  height: 20vh;
+  background-color: #ffffff;
+  border-radius: 8px;
+  border-left: #172639 8px solid;
+  box-shadow: 5px 5px 5px #888888;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-title, .project-text, .post-icon
+{
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.project-title
+{
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.project.text
+{
+  font-size: 12px;
+}
+
+.project-icons
+{
+  margin-top: 1rem;
+  margin-left: 22rem;
 }
 
 .right-sidebar
 {
-  border: yellow solid;
   display: flex;
   flex-direction: column;
   width: 20vw;
+  margin-right: 4rem;
 }
 
 .new, .trending
@@ -253,10 +323,24 @@ ul
 
 .new
 {
-  border: purple solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-post, .trending-post
+{
+  width: 14vw; 
+  background-color: #ffffff;
+  height: 35vh;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px #888888
 }
 
 .trending
 {
-  border: blue solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
