--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ a
 .user-icon
 {
   width: 3.5rem;
-  border-radius: 5rem;
+  border-radius: 10rem;
   margin-left: 2rem;
   margin-right: 1rem;
 }
@@ -257,7 +257,7 @@ a
 
 .posts-title
 {
-  margin-left: 1rem;
+  margin-left: 6.3rem;
   font-weight: bold;
 }
 
@@ -391,6 +391,18 @@ a
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.trending-title-wrapper
+{
+  width: 90%;
+  margin-bottom: 4px;
+}
+
+.trending-title
+{
+  font-weight: bold;
 }
 
 .trending-user
@@ -404,12 +416,30 @@ a
   border-radius: 5rem;
 }
 
+.trending-post-bio
+{
+  font-size: 12px;
+}
+
+.trending-post
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.trending-post-name-bio
+{
+  margin-left: 1rem;
+}
+
 .trending-post-wrapper
 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: red solid;
   height: 100%;
+  width: 90%;
 }
